# auth-service

./: Cargo.toml  Dockerfile  README.md
src/lib/: env.rs
src/lib/application/: http.rs
src/lib/application/http/: handlers.rs  responses.rs
src/lib/application/http/handlers/: health.rs  login.rs  verify_token.rs
src/lib/domain/auth/: entities.rs  ports.rs
src/lib/infrastructure/auth/firebase/: authentication_service.rs
